set relative on Metadata